// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render switch checked 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  width: calc(2 * 18px + 2 * (2px + 1px));
  height: calc(1 * 18px + 2 * (2px + 1px));
  border-radius: calc( ( 18px + 2 * 2px + 2 * 1px ) * 0.5 );
  padding: 2px;
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  transition: box-shadow 0.3s ease-in-out;
}

.c2 {
  box-sizing: border-box;
  width: 18px;
  height: 18px;
  transform: translateX( 18px );
  border-radius: 50%;
  transition: background-color 0.15s ease-in-out,transform 0.15s ease-in-out;
  background-color: var(--pbl-theme-colors-brand-main);
}

<div>
  <div
    alignitems="center"
    class="c0"
    role="switch"
  >
    <div
      class="c1"
      data-testid="pbl-switch"
    >
      <div
        class="c2"
        data-testid="pbl-switch-handle"
      />
      <input
        checked=""
        class="c3"
        data-testid="pbl-switch-input"
        id="custom-id"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Render switch unchecked 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  width: calc(2 * 18px + 2 * (2px + 1px));
  height: calc(1 * 18px + 2 * (2px + 1px));
  border-radius: calc( ( 18px + 2 * 2px + 2 * 1px ) * 0.5 );
  padding: 2px;
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  transition: box-shadow 0.3s ease-in-out;
}

.c2 {
  box-sizing: border-box;
  width: 18px;
  height: 18px;
  transform: translateX( 0 );
  border-radius: 50%;
  transition: background-color 0.15s ease-in-out,transform 0.15s ease-in-out;
  background-color: var(--pbl-theme-colors-gray-500);
}

<div>
  <div
    alignitems="center"
    class="c0"
    role="switch"
  >
    <div
      class="c1"
      data-testid="pbl-switch"
    >
      <div
        class="c2"
        data-testid="pbl-switch-handle"
      />
      <input
        class="c3"
        data-testid="pbl-switch-input"
        id="custom-id"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`Render switch with label 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: var(--pbl-theme-typography-subtitle-marginBottom);
  margin-left: 8px;
  margin-bottom: 0;
}

<label
  class="c0"
  customstyles="[object Object]"
  data-testid="pbl-switch-label"
  for="custom-id"
  mb="0"
  ml="4"
>
  I am a 
  <strong>
    label
  </strong>
</label>
`;
